[package]
name = "rpc-client"

authors.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = [
  "gzip",
  "json",
  "rustls-tls",
  "trust-dns",
] }
serde = { workspace = true }
serde_json = { workspace = true }
ethers-core = { workspace = true }
jsonrpc-core = { workspace = true }

[dev-dependencies]
env_logger = {workspace = true}
hex = { workspace = true }
tokio = { workspace = true }
