[package]
name = "signature-verification-canister-client"
categories = ["cryptography::cryptocurrencies"]
description = "Client for interacting with the signature Verification Canister"
include = ["src/**/*", "../../LICENSE", "../../README.md"]

authors.workspace = true
homepage.workspace = true
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
ic-agent-client = ["ic-canister-client/ic-agent-client"]

[dependencies]
candid = { workspace = true }
did = { workspace = true }
ic-canister-client = { workspace = true }
