[package]
name = "ic_sign_test_canister"
version = "0.1.0"
edition = "2021"

[features]
default = []
export-api = []


[dependencies]
candid = { workspace = true }
eth-signer = { path = "../", features = ["ic_sign"] }
ic-exports = { workspace = true }
ic-canister = { workspace = true }
ethers-core = { workspace = true }