[package]
name = "iceth-client-test-canister"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
export-api = []


[dependencies]
ic-eth-client = { path = "../", features = ["bitfinity"] }
did = { path = "../../did" }

ic-canister = { workspace = true }
ic-exports = { workspace = true }
ic-storage = { workspace = true }
candid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ethers-core = { workspace = true }
jsonrpc-core = { workspace = true }
thiserror = { workspace = true }


[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"]}