[package]
name = "iceth-client-test-canister"

authors.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
export-api = []


[dependencies]
iceth-client = { path = "../", features = ["bitfinity"] }
did = { path = "../../did" }
eth-signer = { path = "../../eth-signer", features = ["ic_sign"] }

ic-canister = { workspace = true }
ic-exports = { workspace = true }
ic-storage = { workspace = true }
candid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ethers-core = { workspace = true }
