[package]
name = "ic-sign-test-canister"

authors.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
export-api = []


[dependencies]
alloy = { workspace = true }
candid = { workspace = true }
did = { workspace = true }
eth-signer = { workspace = true, features = ["ic_sign"] }
ic-exports = { workspace = true }
ic-canister = { workspace = true }
