[package]
name = "register_evm_agent"
categories = []
description = ""
include = ["src/**/*", "README.md"]
keywords = []
readme = "README.md"

authors.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "register-evm-agent"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
eth-signer = { path = "../../../eth-signer" }
ethers-core = { workspace = true }
evm-canister-client = { path = "../../../evm-canister-client", features = ["ic-agent-client"] }
did = { path = "../../../did" }
hex = { workspace = true }
ic-exports = { workspace = true }
log = { workspace = true }
openssl = { workspace = true, features = ["vendored"] } 
rand = { workspace = true }
rlp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
