[package]
name = "simple_canister"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
export-api = []

[dependencies]
async-trait = { workspace = true }
candid = { workspace = true }
did = { path = "../../../did" }
ic-canister = { workspace = true }
ic-exports = { workspace = true }
ic-stable-structures = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
evm-canister-client = { path = "../../../evm-canister-client" }

[dev-dependencies]
candid = { workspace = true }
ethers-core = { workspace = true }
eth-signer = { path = "../../../eth-signer" }
rand = { workspace = true }
tokio = { workspace = true }

[[example]]
name = "signature"
